# HALTarot

./: .gitignore  README.md
TarotPlayer/: import-summary.txt
TarotPlayer/app/: CMakeLists.txt  build.gradle
TarotPlayer/app/src/main/: AndroidManifest.xml
TarotPlayer/app/src/main/assets/: arbrecouleurcoin  arbretypecoin  couleurs  liste  neuronescarte  neuronescoins
TarotPlayer/app/src/main/cpp/src/: CMakeLists.txt  native-lib.cpp
TarotPlayer/app/src/main/cpp/src/include/: Algorithme_surf.hpp  Cache.hpp  Carte.hpp  Histogramme.hpp  Isolation.hpp  annexe.hpp
TarotPlayer/app/src/main/cpp/src/src/: Algorithme_surf.cpp  Cache.cpp  Carte.cpp  Histogramme.cpp  Isolation.cpp  Isolation_Dijkstra.cpp  annexe.cpp  comm.cpp  interface.cpp  variables.cpp
TarotPlayer/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
TarotPlayer/app/src/main/res/layout/: activity_card_decision.xml  activity_change_chien_card.xml  activity_difficulty.xml  activity_enchere.xml  activity_main.xml  activity_player.xml  activity_player_iddle.xml  activity_scan_hand.xml  activity_scores.xml  activity_successful_scan.xml  activity_unsuccessful_scan.xml  ai_encheres.xml  content_main.xml  information.xml  popup_encheres.xml
TarotPlayer/app/src/main/res/menu/: menu_main.xml
TarotPlayer/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
TarotPlayer/app/src/main/res/raw/: arbrecouleurcarte  arbretypecarte  descripteurs  pointscaracteristiques
TarotPlayer/app/src/main/res/values/: colors.xml  (+3 more)
TarotPlayer/gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
